--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,86 @@
 version: "3.8"
 services:
+  # ---- Configuration servers ----
   config1:
     image: mongo:6.0
-    command: ["mongod","--configsvr","--replSet","rs-config","--port","27019"]
-    volumes: ["./data/config1:/data/db"]
+    command:
+      - mongod
+      - "--configsvr"
+      - "--replSet"
+      - "rs-config"
+      - "--port"
+      - "27019"
+      - "--bind_ip_all"
+    volumes:
+      - ./data/config1:/data/db
+
   config2:
     image: mongo:6.0
-    command: ["mongod","--configsvr","--replSet","rs-config","--port","27019"]
-    volumes: ["./data/config2:/data/db"]
+    command:
+      - mongod
+      - "--configsvr"
+      - "--replSet"
+      - "rs-config"
+      - "--port"
+      - "27019"
+      - "--bind_ip_all"
+    volumes:
+      - ./data/config2:/data/db
+
   config3:
     image: mongo:6.0
-    command: ["mongod","--configsvr","--replSet","rs-config","--port","27019"]
-    volumes: ["./data/config3:/data/db"]
+    command:
+      - mongod
+      - "--configsvr"
+      - "--replSet"
+      - "rs-config"
+      - "--port"
+      - "27019"
+      - "--bind_ip_all"
+    volumes:
+      - ./data/config3:/data/db
 
+  # ---- Shard servers ----
   shard1:
     image: mongo:6.0
-    command: ["mongod","--shardsvr","--replSet","rs-shard1","--bind_ip_all"]
-    volumes: ["./data/shard1:/data/db"]
+    command:
+      - mongod
+      - "--shardsvr"
+      - "--replSet"
+      - "rs-shard1"
+      - "--bind_ip_all"
+      - "--port"
+      - "27017"
+    volumes:
+      - ./data/shard1:/data/db
+
   shard2:
     image: mongo:6.0
-    command: ["mongod","--shardsvr","--replSet","rs-shard2","--bind_ip_all"]
-    volumes: ["./data/shard2:/data/db"]
+    command:
+      - mongod
+      - "--shardsvr"
+      - "--replSet"
+      - "rs-shard2"
+      - "--bind_ip_all"
+      - "--port"
+      - "27017"
+    volumes:
+      - ./data/shard2:/data/db
+
   shard3:
     image: mongo:6.0
-    command: ["mongod","--shardsvr","--replSet","rs-shard3","--bind_ip_all"]
-    volumes: ["./data/shard3:/data/db"]
+    command:
+      - mongod
+      - "--shardsvr"
+      - "--replSet"
+      - "rs-shard3"
+      - "--bind_ip_all"
+      - "--port"
+      - "27017"
+    volumes:
+      - ./data/shard3:/data/db
 
+  # ---- Query router ----
   mongos:
     image: mongo:6.0
     command: >
